Implement includes for paper routes
